# milkshakeswap-protocol

./: .gitignore  README.md  setup.cfg
artifacts/: factory_abi.json  factory_compiled.json
contracts/: MyToken.cairo  factory.cairo  pair.cairo  router.cairo  vote.cairo
contracts/interfaces/: IFactoryContract.cairo  IPairContract.cairo
